# ssh-manager-rust

./: .gitignore  Cargo.toml  Readme.md  build_release.sh  config.toml
.cargo/: config.toml
src/: app.rs  main.rs  model.rs  terminal.rs  utils.rs
src/model/: mod.rs  model.rs
src/ui/: mod.rs  style.rs
