[package]
name = "ssh-manager-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.28.1"
ratatui = "0.26.3"
color-eyre="0.6.3"
execute = "0.2.13"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
confy = "0.6.1"